// Original file: domain/proto/services.proto


export interface CreateReviewRequest {
  'title'?: (string);
  'content'?: (string);
  'author_id'?: (string);
  'book_id'?: (string);
}

export interface CreateReviewRequest__Output {
  'title': (string);
  'content': (string);
  'author_id': (string);
  'book_id': (string);
}
